# MLC

./: README.md
LeGO-LOAM/LeGO-LOAM/: CMakeLists.txt  LeGO-LOAM.kdev4
LeGO-LOAM/LeGO-LOAM/.kdev4/: LeGO-LOAM.kdev4
LeGO-LOAM/LeGO-LOAM/cfg/: cfg.yaml  cfg_initialization.yaml  cfg_localmap.yaml  cfg_localmap_legoloam.yaml
LeGO-LOAM/LeGO-LOAM/config/: icp_corner.yaml  icp_surf.yaml  icp_surf_top_front.yaml  icp_surf_top_front_good.yaml  icp_surf_top_tail.yaml
LeGO-LOAM/LeGO-LOAM/include/: calib_refinement.h  calib_refinement_icp.h  check_overlapping.h  lidar_data.h  utility.h
LeGO-LOAM/LeGO-LOAM/include/camodocal/: EigenUtils.h
LeGO-LOAM/LeGO-LOAM/include/camodocal/calib/: PlanarHandEyeCalibration.h
LeGO-LOAM/LeGO-LOAM/include/pointmatcher_ros/: point_cloud.h
LeGO-LOAM/LeGO-LOAM/include/visualizer/: Visualizer.h
LeGO-LOAM/LeGO-LOAM/launch/: run.launch  run_calib.launch  run_calib_initialization.launch  run_calib_refinement_icp.launch  run_check_overlapping.launch  run_check_overlapping_3.launch  run_check_overlapping_4.launch  run_icp_simple.launch  run_icp_simple_map.launch
LeGO-LOAM/LeGO-LOAM/src/: calib_initialization.cpp  calib_refinement.cpp  calib_refinement_icp.cpp  check_overlapping.cpp  check_overlapping_2.cpp  check_overlapping_3.cpp  check_overlapping_4.cpp  featureAssociation.cpp  icp_simple.cpp  icp_simple_map.cpp  imageProjection.cpp  mapOptmization.cpp  point_cloud.cpp  transformFusion.cpp
LeGO-LOAM/LeGO-LOAM/src/camodocal/calib/: CMakeLists.txt  PlanarHandEyeCalibration.cc
LeGO-LOAM/LeGO-LOAM/src/visualizer/: Visualizer.cpp
LeGO-LOAM/visualizer/: Visualizer.cc  Visualizer.h
matlab_initialization/: README.md  SE3_to_matrix.m  bag_process_pc.m  calcR.m  calcT.m  calcT_hkust.m  calculate_error.m  calibration_result_evaluation.m  car_run.m  car_run_cvx.m  estimate_Ryx.m  estimate_Rz_tx_ty.m  estimate_Rzyx.m  extrinsic_error.m  genKittiCam.m  genKittiVel.m  gen_lidar_tf.m  golf_trajectory_alignment.m  ground_obtain_from_bag.m  ground_obtain_from_pcd.m  initialization_planar.m  kittiRun.m  miscalibration_error.m  motion_based_refinement.m  motion_pair_filtration.m  odom_obtain_from_bag.m  offline_calibration_planner.m  offline_calibration_planner_backup.m  online_calibration_non_planner.m  online_calibration_planner.m  pcd_transform.m  plot_sensor_odom.m  process_pcd.m  read_refinement_trajectory_error.m  rotValidate.m  test.m  test_pc.m  test_wp_filter.m  visualization_initialization_trajectory.m  visualization_online_calibration_planner.m  (+2 more)
matlab_initialization/camodocal/: solveQuadraticEquation.m
matlab_initialization/evaluation/: real_initialization_evaluation_1.m  real_initialization_evaluation_path_1.m  real_initialization_evaluation_path_2.m  real_refinement_evaluation_2.m  simulation_evaluation_path_1.m  simulation_evaluation_path_2.m  simulation_evaluation_path_3.m  simulation_initialization_evaluation_1.m  simulation_initialization_evaluation_2.m  visualization_overlap_index.m  visualization_trajectory.m
matlab_initialization/kabsch/: Kabsch.m
matlab_initialization/optimization/: odom_read_from_bag.m  optimization_odom_tf.m  tf_to_vector.m
matlab_initialization/result/: crop_pdf.sh  error.eps  trajectory_1.eps  trajectory_1.fig  trajectory_2.eps  trajectory_3.eps  trajectory_4.eps
